--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # 网站基本信息
-title: "你的博客名称"
-description: "这里写博客描述"
+title: "请输入文本（说实话真没想好网站要叫啥）"
+description: "虽世殊事异，所以兴怀，其致一也。后之览者，亦将有感于斯文。"
 baseurl: ""  # 如果你的网站在子目录，填写子目录路径
 url: "https://你的用户名.github.io"  # 你的网站完整URL
 
 # 作者信息
 author:
-  name: "你的名字"
-  email: "你的邮箱"
-  github: "你的GitHub用户名"
+  name: "王思维"
+  email: "cgn.wang@gmail.com"
+  github: "CGNwang"
 
 # 构建设置
 markdown: kramdown  # Markdown解析器
